<resources>
    <string name="app_name">Sholist</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="login_">Login!</string>
    <string name="forget_your_password">Forgot my password.</string>
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Password</string>
    <string name="or">OR</string>
    <string name="dont_have_a_accont">Dont you have an account?</string>
    <string name="register_">Register!</string>
    <string name="register">Register</string>
    <string name="all_fields_are_required">All fields are required. Please enter all fields and continue.</string>
    <string name="the_terms_of_use.">The terms of use.</string>
    <string name="i_have_accept">I read and accept.</string>
    <string name="do_you_have_accont">Do you have Sholist account?</string>
    <string name="you_can_reset_your_password">You can reset your password with the reset link we send to your email address.</string>
    <string name="send_mail">Send mail</string>
    <string name="set_your_username_and_name">Set your username and name</string>
    <string name="please_set_a_unique_username">Please set a unique username and enter your name.</string>
    <string name="name_surname">Name Surname</string>
    <string name="username">Username</string>
    <string name="save">Save</string>
    <string name="email_verification">Email Verification</string>
    <string name="please_confirm_your_mail">Please confirm your e-mail by clicking the link sent to your e-mail address and then login.</string>
    <string name="didnt_you_get_any_mail">Didn t you get any mail?</string>
    <string name="send_new_mail">Send new mail!</string>
    <string name="content_description_info">Info</string>
    <string name="content_description_settings">Settings</string>
    <string name="info">Info</string>
    <string name="settings">Settings</string>
    <string name="shopping_list">Shopping Lists</string>
    <string name="your_list_is_empty">Your List is Empty</string>
    <string name="create_list_add_them">Create list and add them to your trolley for an easier sholist experience.</string>
    <string name="items">%s Items</string>
    <string name="countx">%sx</string>
    <string name="loading">Loading</string>
    <string name="add_list">Create new list</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="add_list_name">List Name</string>
    <string name="set_color">Set color</string>
    <string name="set_user_data">Set User Information</string>
    <string name="change_password">Change my password.</string>
    <string name="oldPassword">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="add_item">Add item</string>
    <string name="select_item">Select item</string>
    <string name="set_icon">Set icon</string>
    <string name="set_count">Set count</string>
    <string name="user_list">User List</string>
    <string name="current_user">Current Users</string>
    <string name="waiting">Waiting</string>
    <string name="add_user">Add User</string>
    <string name="create">Create</string>
    <string name="edit_list">Edit list</string>
    <string name="edit">Edit</string>
    <string name="remove_list">Remove list</string>
    <string name="user_list_">User list</string>
    <string name="clear_all">Clear all list</string>
    <string name="clear_purchases">Clear purchased items</string>
    <string name="leave_list">Leave list</string>
    <string name="group_invites_list">Group invites list</string>
    <string name="there_is_no_invitation">There is no invitation.</string>
    <string name="google_login">Sign in</string>
    <string name="login_failed">Login failed.</string>
    <string name="mail_hass_been_sent">Mail has been sent. Please check your email.</string>
    <string name="password_must_be_more_then_six">Password must be more than 8 characters.</string>
    <string name="invalid_email_address">Invalid e-mail address.</string>
    <string name="please_confirm_term_of_use">Please confirm the terms of use.</string>
    <string name="invalid_name_and_surname">Invalid name and surname.</string>
    <string name="current_username">Current username.</string>
    <string name="username_must_be_least_4_char">Username must be at least 4 characters.</string>
    <string name="the_invitation_has_been_sent">The invitation has been sent.</string>
    <string name="please_enter_username">Please enter username.</string>
    <string name="please_enter_list_name">Please enter list name.</string>
    <string name="user_removed">User removed.</string>
    <string name="please_enter_product_name">Please enter product name.</string>
    <string name="name_has_been_changed">Name has been changed.</string>
    <string name="password_has_been_changed">Password has been changed.</string>
    <string name="logout">Logout</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_item">Delete Item</string>
    <string name="delete_item_shooing_list">Delete Shopping list</string>
    <string name="are_you_want_delete">Are you sure you want to delete the item?</string>
    <string name="are_you_want_delete_shooing_list">Are you sure you want to delete the shopping list?</string>
    <string name="email_allready_registred">This e-mail address has already been registered.</string>
    <string name="theme">Theme</string>
    <string name="auto">Auto</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
</resources>