<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/menu_item_info"
    android:contentDescription="@string/content_description_info"
        android:orderInCategory="10"
        android:title="@string/info"
        android:visible="false"/>
    <item
        android:id="@+id/menu_item_settings"
    android:contentDescription="@string/content_description_settings"
        android:orderInCategory="10"
        android:title="@string/settings"
        android:visible="false"/>
    <item
        android:id="@+id/menu_item_logout"
        android:contentDescription="@string/content_description_settings"
        android:orderInCategory="10"
        android:title="@string/logout" />
    <item
        android:id="@+id/menu_item_invitation"
        android:contentDescription="@string/content_description_settings"
        android:orderInCategory="10"
        android:title="invitation"
        app:showAsAction="always"
        android:icon="@drawable/ic_invitation"
       />
</menu>