<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SettingsFragment">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center|start|center_horizontal|left|center_vertical"
                android:text="@string/settings"
                android:textSize="28dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/tvTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:gravity="center|start|left|center_vertical"
                android:text="@string/theme"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <nl.bryanderidder.themedtogglebuttongroup.ThemedToggleButtonGroup
                android:id="@+id/toggleButtonGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:justifyContent="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTheme"> <!-- this attribute is from the underlying FlexboxLayout -->

                <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
                    android:id="@+id/btnNightModeAuto"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    app:toggle_text="@string/auto" />

                <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
                    android:id="@+id/btnNightModeDark"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    app:toggle_text="@string/dark" />

                <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
                    android:id="@+id/btnNightModeLite"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    app:toggle_text="@string/light" />

            </nl.bryanderidder.themedtogglebuttongroup.ThemedToggleButtonGroup>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:gravity="center|start|left|center_vertical"
                android:text="@string/set_user_data"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toggleButtonGroup" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/username"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                android:visibility="gone"
                >

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:inputType="textEmailAddress"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/name_surname"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout_username">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name_surname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:maxLength="30"
                    android:singleLine="true" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_info_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/save"
                    android:textAllCaps="false"
                    app:cornerRadius="20dp"
                    android:textSize="20dp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/tv_change_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:gravity="center|start|left|center_vertical"
                android:text="@string/change_password"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout_name" />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_oldPw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/oldPassword"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_change_password"
                >

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/et_old_pw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:inputType="textEmailAddress"

                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_new_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/new_password"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout_oldPw"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_new_pw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:inputType="textPassword"
                    android:maxLength="30"
                    android:singleLine="true" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_pw_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"

                    android:fontFamily="sans-serif-light"
                    android:text="@string/save"
                    android:textAllCaps="false"
                    app:cornerRadius="20dp"
                    android:textSize="20dp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>
